tests/build/widget/new_fns_cannot_const_generics.stderr
error: `new_child` does not support `const` generics
  --> $DIR/new_fns_cannot_const_generics.rs:10:18
   |
10 |     fn new_child<const N: usize>() -> [bool; N] {
   |                  ^^^^^

error: `new` does not support `const` generics
 --> $DIR/new_fns_cannot_const_generics.rs:7:12
  |
7 |     fn new<const N: usize>(child: impl UiNode, id: WidgetId) -> [bool; N] {
  |            ^^^^^

error[E0425]: cannot find value `N` in this scope
 --> $DIR/new_fns_cannot_const_generics.rs:7:72
  |
7 |     fn new<const N: usize>(child: impl UiNode, id: WidgetId) -> [bool; N] {
  |                                                                        ^ not found in this scope
  |
help: consider importing one of these items
  |
5 |     use crate::test_widget::__core::var::fmt::string::lossy::char::methods::unicode::N;
  |
5 |     use zero_ui::prelude::GestureKey::N;
  |
5 |     use zero_ui::prelude::Key::N;
  |
5 |     use zero_ui_core::gesture::GestureKey::N;
  |
    and 1 other candidate

error[E0277]: the trait bound `[bool; _]: UiNode` is not satisfied
  --> $DIR/new_fns_cannot_const_generics.rs:10:39
   |
10 |     fn new_child<const N: usize>() -> [bool; N] {
   |                                       ^^^^^^^^^ the trait `UiNode` is not implemented for `[bool; _]`
